--- a/pack_manifest.json
+++ b/pack_manifest.json
@@ -1,8 +1,8 @@
 {
 	"format_version": 2,
 	"header": {
-		"name": "FaunaBedrock",
-		"description": "sammysblocks.com",
+		"name": "SplatoonMcpe",
+		"description": "SplatoonMcpeRe",
 		"uuid": "e51cdd9f-c688-4de2-9252-2c848e28455b",
 		"version": [
 			1,
